fix logic in order and order item